--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "standard": "^11.0.1"
   },
   "dependencies": {
+    "dependency-graph": "^0.7.1",
     "lodash": "^4.17.10",
     "pirates": "^4.0.0",
     "webpack": "4.6.0"
