--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dependency-graph": "^0.7.1",
     "lodash": "^4.17.10",
     "pirates": "^4.0.0",
+    "user-async-function": "^1.1.0",
     "webpack": "4.6.0"
   },
   "standard": {
